# hiworks-commute

./: .gitignore  README.md  package-lock.json  package.json
scripts/: package.json  playwright-worker.js  setup-bundle.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  playwright.rs
